<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@mipmap/dashboard_dark"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_allNotes"
            android:icon="@mipmap/book"
            android:title="@string/all_notes" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@mipmap/note_dark"
            android:title="@string/note" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@mipmap/todo"
            android:title="@string/plans" />
        <item
            android:id="@+id/nav_voice"
            android:icon="@mipmap/mic_dark"
            android:title="@string/voice_notes" />
        <item
            android:id="@+id/nav_drawings"
            android:icon="@mipmap/paint"
            android:title="@string/drawings" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_trash"
                android:icon="@mipmap/trash_dark"
                android:title="@string/trash" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/settings_dark"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>