<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    android:orientation="vertical">

    <TextView
        android:id="@+id/paperNote"
        style="@style/alert_dialog"
        android:text="@string/write"/>

    <TextView
        android:id="@+id/todoNote"
        style="@style/alert_dialog"
        android:text="@string/todo"/>

    <TextView
        android:id="@+id/audioNote"
        style="@style/alert_dialog"
        android:text="@string/record"/>

    <TextView
        android:id="@+id/drawNote"
        style="@style/alert_dialog"
        android:text="@string/draw"/>

    <TextView
        android:id="@+id/cancelNote"
        style="@style/alert_dialog"
        android:text="@string/cancel"/>

</LinearLayout>