<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@drawable/note_dialog_press"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/restore_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/note_dialog_press"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/yes" />

        <TextView
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/note_dialog_press"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/no" />

    </LinearLayout>

</LinearLayout>