<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/small_top"
    android:paddingBottom="@dimen/small_top"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/noteColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@drawable/note_white" >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="30dp"
                android:clickable="false" >

                <EditText
                    android:id="@+id/noteTitle"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeight"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:enabled="true"
                    android:textIsSelectable="true" />

                <EditText
                    android:id="@+id/noteArea"
                    android:layout_marginTop="?listPreferredItemHeight"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/message"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:background="#00ffffff"
                    android:ems="10"
                    android:enabled="true"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textIsSelectable="true" />

            </RelativeLayout>

    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/topper" />
</RelativeLayout>